# UniRA2Client

./: .git-cz.json  .gitattributes  .gitignore  .lintstagedrc.json  .npmrc  .prettierrc.json  Cargo.toml  UniRA2Client.sln  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rush.json  uni-ra2-client.code-workspace
.cargo/: config
.github/workflows/: publish-web-runtime  publish-web-runtime.yml  tauri-client-unit-test.yml  unit-test.yml
Client/: .editorconfig  Application.xaml  Application.xaml.cs  Client.csproj  Form1.Designer.cs  Form1.cs  MainWindow.xaml  MainWindow.xaml.cs  ModWindowManager.cs  ModuleWindow.xaml  ModuleWindow.xaml.cs  Program.cs
Client/CommandLine/: CommandLine.cs  (+2 more)
ClientUI/: .eslintrc.cjs  ClientUI.esproj  README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ClientWebRuntime/: .eslintrc.cjs  .gitignore  .prettierrc  ClientWebRuntime.esproj  README.md  api-extractor.jsonc  env.d.ts  package.json  tsconfig.json  vite.config.ts
TauriClient/: package.json  tsconfig.app.json  tsconfig.config.json  tsconfig.json  vite.config.ts
UnitTests/: UnitTests.csproj
apps/client-be/: .gitignore  Cargo.toml  package.json  tauri.conf.json
apps/client-be/src/: main.rs
apps/client-be/src/command/: lifecycle.rs
apps/client-be/src/error/: mod.rs
apps/client-be/src/fs/: mod.rs
apps/client-be/src/game/: mod.rs
apps/client-be/src/game/map/: custom_data.rs  map_data.rs  map_descriptor.rs  utils.rs
apps/client-be/src/game/player/: human_player.rs
client/: package.json  tsconfig.json
schemas/: map-desc.json
(+213 files in other folders)
