[package]
name = "cylearun-client"
version = "0.0.0"
description = "Cylearun client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = [ "dialog-all",
    "system-tray",
    "protocol-asset",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ini = { path = "../../libs/serde-ini" }
rust-embed = "6.8.1"
jsonschema = "0.17.0"
glob = "0.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# When enabled, you can specify another directory as the working directory, though env `UNIRA2_CLIENT_CWD`
debug_redirect = []
